Fixed Back_to_top btn not showing

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,7 +18,8 @@ html {
     scroll-behavior: smooth;
 }
 
-html, body {
+html,
+body {
     overflow-x: hidden;
 }
 
@@ -83,27 +84,39 @@ body {
     animation: fadeInRight 0.6s ease-out forwards;
 }
 
-#back-to-top {
-  position: fixed;
-  bottom: 32px;
-  right: 32px;
-  z-index: 999;
-  background: #222;
-  color: #fff;
-  border: none;
-  border-radius: 50%;
-  width: 48px;
-  height: 48px;
-  font-size: 2rem;
-  cursor: pointer;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.2);
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 0.3s;
+.back-to-top {
+    position: fixed;
+    bottom: 32px;
+    right: 32px;
+    z-index: 999;
+    background: transparent;
+    border-radius: 6px;
+    backdrop-filter: blur(1px);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    border:none;
+    qborder: 1px solid #ff0000;
+    width: 40px;
+    height: 40px;
+    font-size: 2rem;
+    cursor: pointer;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s;
+
+    display: flex;
+    qalign-items: center;
+    justify-content: center;
 }
-#back-to-top.show {
-  opacity: 1;
-  pointer-events: auto;
+
+.back-to-top svg {
+    width: 35px;
+    height: 35px;
+}
+
+.back-to-top.show {
+    opacity: 1;
+    pointer-events: auto;
 }
 
 
